adding filter inputs

--- a/app/assets/stylesheets/translations.css.sass.erb
+++ b/app/assets/stylesheets/translations.css.sass.erb
@@ -1,5 +1,4 @@
 header
-  border-bottom: 1px solid #A0A0A0
   width: 960px
   margin: 15px
   min-height: 77px
@@ -9,3 +8,11 @@ header
     height: 71px
     width: 170px
     display: inline-block  
+
+section.filter
+  background: #A0A0A0  
+  padding: 15px
+
+  .input-section
+    display: inline-block
+    margin-right: 15px
