laying out the filter section

--- a/app/assets/stylesheets/translations.css.sass.erb
+++ b/app/assets/stylesheets/translations.css.sass.erb
@@ -1,7 +1,7 @@
 header
   width: 960px
-  margin: 15px
   min-height: 77px
+  margin: 15px 0px 0 30px
 
   #logo
     background: url(<%= asset_path 'logo.png' %>) no-repeat 0 0  
@@ -9,10 +9,18 @@ header
     width: 170px
     display: inline-block  
 
-section.filter
-  background: #A0A0A0  
-  padding: 15px
+#content
+  margin: 0 30px 0 30px
 
+section.filter
+  background: #5793C1
+  padding: 19px
+
+  label
+    display: block
   .input-section
     display: inline-block
     margin-right: 15px
+
+section.grid-view
+  
