--- a/app/views/translations/index.html.haml
+++ b/app/views/translations/index.html.haml
@@ -9,10 +9,10 @@
     .input-section
       = submit_tag 'Filter'
 
-.grid-view
+%section.grid-view
   %table.grid
     %tr
-      %th.key Key
+      %th.key I18n Key
       %th.value Value
       - for translation in translations
         %tr.row
