--- a/app/assets/stylesheets/translations.css.sass.erb
+++ b/app/assets/stylesheets/translations.css.sass.erb
@@ -16,6 +16,9 @@ section.filter
   background: #5793C1
   padding: 19px
 
+  label, input, select
+    font-size: 16px
+
   label
     display: block
   .input-section
@@ -23,4 +26,7 @@ section.filter
     margin-right: 15px
 
 section.grid-view
+  margin-top: 20px
+  th
+    font-size: 16px
   
