--- a/app/assets/stylesheets/translations.css.sass.erb
+++ b/app/assets/stylesheets/translations.css.sass.erb
@@ -13,14 +13,16 @@ header
   margin: 0 30px 0 30px
 
 section.filter
-  background: #5793C1
-  padding: 19px
+  display: inline-block
+  margin: 0 0 0 100px
+  vertical-align: top
 
   label, input, select
-    font-size: 16px
+    font-size: 14px
 
   label
     display: block
+    color: #004983
   .input-section
     display: inline-block
     margin-right: 15px
