The key can't be the routes id because of crazy special characters in some of the keys. Also added create action and route

--- a/app/views/translations/index.html.haml
+++ b/app/views/translations/index.html.haml
@@ -19,4 +19,4 @@
         %tr.row
           %td.key= translation.key
           %td.value
-            %span.editable{'data-key' => translation.key, 'data-url' => translation_url('x')}= translation.value
+            %span.editable{'data-id' => translation.key, 'data-url' => translation_url('x')}= translation.value
