--- a/app/assets/stylesheets/translations.css.sass.erb
+++ b/app/assets/stylesheets/translations.css.sass.erb
@@ -12,13 +12,15 @@ header
 #content
   margin: 0 30px 0 30px
 
-section.filter
+section.filter, section.create
+  padding: 15px
   display: inline-block
-  margin: 0 0 0 100px
+  margin: 0 0 0 50px
   vertical-align: top
 
   label, input, select
     font-size: 14px
+    width: 75px
 
   label
     display: block
@@ -26,6 +28,10 @@ section.filter
   .input-section
     display: inline-block
     margin-right: 15px
+
+section.create
+  margin: 0
+  border: 1px solid #004983
 
 section.grid-view
   margin-top: 20px
