--- a/app/assets/stylesheets/translations.css.sass.erb
+++ b/app/assets/stylesheets/translations.css.sass.erb
@@ -37,4 +37,7 @@ section.grid-view
   margin-top: 20px
   th
     font-size: 16px
+
+.errors, section.create .field_with_errors label
+  color: red
   
