new labels need new specs

--- a/app/views/translations/index.html.haml
+++ b/app/views/translations/index.html.haml
@@ -27,12 +27,12 @@
   %table#translations.zebra-striped
     %thead
       %tr
-        %th.delete
+        %th.delete 
         %th.key I18n Key
         %th.value Value
     %tbody
       - for translation in translations
-        %tr
+        %tr.row
           %td
             = link_to(image_tag('trash_can1.png'), '#', 'data-key' => translation.key, 'data-url' => translation_url('x'), :class => 'destroy-translation')
           %td.key= translation.key
