heroku is not linking the asset_path

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
 
-    %link{:rel => "Shortcut Icon", :type => "image/ico", :href => asset_path("favicon.png")}
+    -#%link{:rel => "Shortcut Icon", :type => "image/ico", :href => asset_path("favicon.png")}
 
   %body
     .topbar
