--- a/app/views/translations/index.html.haml
+++ b/app/views/translations/index.html.haml
@@ -32,9 +32,9 @@
         %th.value Value
     %tbody
       - for translation in translations
-        %tr
+        %tr{'data-key' => translation.key, 'data-url' => translation_url('x')}
           %td
-            = link_to(image_tag('trash_can1.png'), '#', 'data-key' => translation.key, 'data-url' => translation_url('x'), :class => 'destroy-translation')
+            = link_to(image_tag('trash_can1.png'), '#', :class => 'destroy-translation')
           %td.key= translation.key
           %td.value
-            %span.editable{'data-key' => translation.key, 'data-url' => translation_url('x')}= translation.value
+            %span.editable= translation.value
