Asset pipeline changes just use cdn jquery version for a quick win

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title translatable
+    = javascript_include_tag "http://code.jquery.com/jquery-1.5.2.min.js"
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
